--- a/Asissgment1/Asissgment1.vcxproj.filters
+++ b/Asissgment1/Asissgment1.vcxproj.filters
@@ -22,5 +22,6 @@
   <ItemGroup>
     <Image Include="..\..\hue1.png" />
     <Image Include="..\..\hue2.jpg" />
+    <Image Include="bottom_banner.jpg" />
   </ItemGroup>
 </Project>
