Added AI images, notebook for keeping track of prompts and playing around with a divdier

--- a/Asissgment1/Asissgment1.vcxproj
+++ b/Asissgment1/Asissgment1.vcxproj
@@ -130,9 +130,11 @@
     <None Include="StyleSheet2.css" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="bottom_banner.jpg" />
+    <Image Include="bottom_banner.png" />
     <Image Include="divider.png" />
+    <Image Include="forestView.png" />
     <Image Include="hue1.jpg" />
+    <Image Include="lake.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
