--- a/Asissgment1/Asissgment1.vcxproj.filters
+++ b/Asissgment1/Asissgment1.vcxproj.filters
@@ -22,8 +22,10 @@
     <None Include="hue2" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="bottom_banner.jpg" />
-    <Image Include="divider.png" />
     <Image Include="hue1.jpg" />
+    <Image Include="forestView.png" />
+    <Image Include="lake.png" />
+    <Image Include="bottom_banner.png" />
+    <Image Include="divider.png" />
   </ItemGroup>
 </Project>
