added dividers and made the navigation look nicer

--- a/Asissgment1/Asissgment1.vcxproj.filters
+++ b/Asissgment1/Asissgment1.vcxproj.filters
@@ -27,5 +27,6 @@
     <Image Include="lake.png" />
     <Image Include="bottom_banner.png" />
     <Image Include="divider.png" />
+    <Image Include="logo.png" />
   </ItemGroup>
 </Project>
