--- a/Asissgment1/Asissgment1.vcxproj
+++ b/Asissgment1/Asissgment1.vcxproj
@@ -135,6 +135,7 @@
     <Image Include="forestView.png" />
     <Image Include="hue1.jpg" />
     <Image Include="lake.png" />
+    <Image Include="logo.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
