--- a/Asissgment1/Asissgment1.vcxproj
+++ b/Asissgment1/Asissgment1.vcxproj
@@ -123,6 +123,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="contactpage.htm">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
     <None Include="HTMLPage1.html" />
     <None Include="HtmlPage2.html" />
     <None Include="hue2" />
