added .github folders for cpanal

--- a/Asissgment1/Asissgment1.vcxproj.filters
+++ b/Asissgment1/Asissgment1.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include=".github">
+      <UniqueIdentifier>{3d5d2325-0dfe-4477-8057-40be6e087fb3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include=".github\workflow">
+      <UniqueIdentifier>{40e24f10-b020-400c-88ce-027fc2ed9b0c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="HTMLPage1.html" />
@@ -23,6 +29,9 @@
     <None Include="StyleSheet3.css" />
     <None Include="contactpage.html" />
     <None Include="contact.css" />
+    <None Include=".github\workflow\deploy.yml">
+      <Filter>.github\workflow</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="hue1.jpg" />
