--- a/Asissgment1/Asissgment1.vcxproj
+++ b/Asissgment1/Asissgment1.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include=".github\workflow\deploy.yml" />
     <None Include="contactpage.html">
       <DeploymentContent>true</DeploymentContent>
     </None>
