--- a/Asissgment1/Asissgment1.vcxproj.filters
+++ b/Asissgment1/Asissgment1.vcxproj.filters
@@ -16,7 +16,7 @@
     <Filter Include=".github">
       <UniqueIdentifier>{3d5d2325-0dfe-4477-8057-40be6e087fb3}</UniqueIdentifier>
     </Filter>
-    <Filter Include=".github\workflow">
+    <Filter Include=".github\workflows">
       <UniqueIdentifier>{40e24f10-b020-400c-88ce-027fc2ed9b0c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -30,7 +30,7 @@
     <None Include="contactpage.html" />
     <None Include="contact.css" />
     <None Include=".github\workflow\deploy.yml">
-      <Filter>.github\workflow</Filter>
+      <Filter>.github\workflows</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
