--- a/Asissgment1/Asissgment1.vcxproj.filters
+++ b/Asissgment1/Asissgment1.vcxproj.filters
@@ -19,31 +19,58 @@
     <Filter Include=".github\workflows">
       <UniqueIdentifier>{40e24f10-b020-400c-88ce-027fc2ed9b0c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="images">
+      <UniqueIdentifier>{50abc5a9-27d8-4fa8-8dd0-a70e0d6f6f57}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="home.html" />
     <None Include="StyleSheet2.css" />
     <None Include="JavaScript1.js" />
     <None Include="about.html" />
-    <None Include="hue2" />
     <None Include="StyleSheet3.css" />
     <None Include="contactpage.html" />
     <None Include="contact.css" />
     <None Include=".github\workflow\deploy.yml">
       <Filter>.github\workflows</Filter>
     </None>
+    <None Include="hue2">
+      <Filter>images</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="hue1.jpg" />
-    <Image Include="forestView.png" />
-    <Image Include="lake.png" />
-    <Image Include="bottom_banner.png" />
-    <Image Include="divider.png" />
-    <Image Include="logo.png" />
-    <Image Include="bedroom.png" />
-    <Image Include="livingroom.png" />
-    <Image Include="kitchen.png" />
-    <Image Include="couple.png" />
-    <Image Include="snowmobo.png" />
+    <Image Include="bedroom.png">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="bottom_banner.png">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="couple.png">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="divider.png">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="forestView.png">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="hue1.jpg">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="lake.png">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="kitchen.png">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="livingroom.png">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="logo.png">
+      <Filter>images</Filter>
+    </Image>
+    <Image Include="snowmobo.png">
+      <Filter>images</Filter>
+    </Image>
   </ItemGroup>
 </Project>
