--- a/Asissgment1/Asissgment1.vcxproj.filters
+++ b/Asissgment1/Asissgment1.vcxproj.filters
@@ -37,6 +37,7 @@
     </None>
     <None Include="..\aboutpage.html" />
     <None Include="..\homepage.html" />
+    <None Include="..\JavaScript1.js" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="bedroom.png">
