contact form changes

--- a/Asissgment1/Asissgment1.vcxproj
+++ b/Asissgment1/Asissgment1.vcxproj
@@ -124,17 +124,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="..\aboutpage.html" />
+    <None Include="..\contact.css" />
     <None Include="..\homepage.html" />
     <None Include="..\JavaScript1.js" />
+    <None Include="..\StyleSheet3.css" />
     <None Include=".github\workflow\deploy.yml" />
     <None Include="contactpage.html">
       <DeploymentContent>true</DeploymentContent>
     </None>
     <None Include="hue2" />
     <None Include="JavaScript1.js" />
-    <None Include="contact.css" />
     <None Include="StyleSheet2.css" />
-    <None Include="StyleSheet3.css" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="bedroom.png" />
