--- a/Asissgment1/Asissgment1.vcxproj.filters
+++ b/Asissgment1/Asissgment1.vcxproj.filters
@@ -26,9 +26,7 @@
   <ItemGroup>
     <None Include="StyleSheet2.css" />
     <None Include="JavaScript1.js" />
-    <None Include="StyleSheet3.css" />
     <None Include="contactpage.html" />
-    <None Include="contact.css" />
     <None Include=".github\workflow\deploy.yml">
       <Filter>.github\workflows</Filter>
     </None>
@@ -38,6 +36,8 @@
     <None Include="..\aboutpage.html" />
     <None Include="..\homepage.html" />
     <None Include="..\JavaScript1.js" />
+    <None Include="..\StyleSheet3.css" />
+    <None Include="..\contact.css" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="bedroom.png">
