--- a/Asissgment1/Asissgment1.vcxproj.filters
+++ b/Asissgment1/Asissgment1.vcxproj.filters
@@ -38,6 +38,7 @@
     <None Include="..\JavaScript1.js" />
     <None Include="..\StyleSheet3.css" />
     <None Include="..\contact.css" />
+    <None Include="..\StyleSheet2.css" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="bedroom.png">
