fixed alot of file issues

--- a/Asissgment1/Asissgment1.vcxproj
+++ b/Asissgment1/Asissgment1.vcxproj
@@ -127,7 +127,7 @@
     <None Include="..\homepage.html" />
     <None Include="..\JavaScript1.js" />
     <None Include="..\root\contact.css" />
-    <None Include="..\StyleSheet2.css" />
+    <None Include="..\root\StyleSheet2.css" />
     <None Include="..\StyleSheet3.css" />
     <None Include=".github\workflow\deploy.yml" />
     <None Include="contactpage.html">
